--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3"
+  },
+  "dependencies": {
+    "mapsapi-polygonmap": "git+https://github.com/yandex-shri-fx-team/mapsapi-polygonmap.git"
   }
 }
